# ir-mcl

./: .gitignore  PREPARE_DATA.md  README.md  environment.yml  eval.py  loc_demo.py  main.py  train.py
config/global_localization/: loc_config_test1.yml  loc_config_test2.yml  loc_config_test3.yml  loc_config_test4.yml  loc_config_test5.yml
config/pose_tracking/: loc_config_test1.yml  loc_config_test2.yml  loc_config_test3.yml  loc_config_test4.yml  loc_config_test5.yml
mcl/: CMakeLists.txt  Makefile  initialization.py  motion_model.py  rendering.py  sensor_model.py  setup.py  vis_loc_result.py  visualizer.py
mcl/srrg_utils/: test_srrg.py
mcl/srrg_utils/pf_library/: pf_utils.py
mcl/srrg_utils/pf_library/pybind/: CMakeLists.txt  pf_library.cpp  pf_library.h  pf_library_pybind.cpp  stl_vector_eigen.h
nof/: nof_utils.py  render.py
nof/criteria/: loss.py  metrics.py  pointcloud_metrics.py
nof/dataset/: __init__.py  ipb2dmapping.py  ray_utils.py
nof/networks/: __init__.py  models.py
shells/: loc_demo.sh
shells/pretraining/: fr079.sh  intel.sh  ipblab.sh  mit.sh
tools/: INSTRUCTIONS.md  convert_bag2json_localization.py  convert_bag2json_mapping.py  convert_carmen2bag.py
tools/libs/: format_convert_lib.py  rosbag_lib.py  tools_utils.py
